--- a/src/App.css
+++ b/src/App.css
@@ -532,40 +532,36 @@
   .marker-button {
     height: var(--marker-size);
     width: var(--marker-size);
-    color: var(--primary-color);
+    background: var(--primary-color);
     position: absolute;
-    pointer-events: none;
-    transition: color 0.25s ease-in-out;
+    transition: background 0.25s ease-in-out;
   }
 
   .marker-button-focused,
   .marker-button:hover,
   .marker-button:focus {
     outline: none;
-    /*box-shadow: inset 0px 0px 0px 3px var(--primary-dark-color-overlay);*/
-    color: var(--primary-dark-color);
-    transition: color 0.25s ease-in-out;
+    background: var(--primary-dark-color);
+    transition: background 0.25s ease-in-out;
   }
 
-  .marker-image {
-    height: 50px;
-    width: 50px;
+  .marker-shape {
+    border-radius: 50% 50% 50% 0;
+    border: 2px solid #000;
+    transform: scale(0.6, 1.0) rotate(-45deg);
+  }
+
+  .marker-shape::after {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-  }
-
-  .marker-button svg {
-    pointer-events: none;
-  }
-
-  .marker-button svg path {
-    fill: currentColor;
-    pointer-events: all;
-    stroke: var(--secondary-dark-color);
-    stroke-width: 0.5;
+    content: '';
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    margin-left: -7px;
+    margin-top: -7px;
+    background-color: #000;
   }
 
   /* ==== Info Window ==== */
