--- a/src/App.css
+++ b/src/App.css
@@ -390,6 +390,13 @@
     width: 48%;
   }
 
+  .side-bar-heading:focus {
+    outline: none;
+    box-shadow: 0px 0px 0px 3px var(--primary-dark-color-overlay);
+    transition: all 0.25s ease-in-out;
+    transition-property: outline, box-shadow;
+  }
+
 /* ====================== Side Bar - Results ====================== */
   .search-results {
     list-style-type: none;
