--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,18 @@
     transition-property: outline, box-shadow;
   }
 
+  /* Note: this is a modified version taken from:
+   * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+   */
+  .sr-only {
+    position: absolute !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden !important;
+    clip: rect(1px 1px 1px 1px) !important; /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px) !important;
+  }
+
 /* ====================== Typography ====================== */
   body,
   h1,
